# AI-for-Humanity-exercises

./: .gitignore  notes.md  pyproject.toml
notebooks/: linear_model.ipynb
src/ai4h/models/: linear_model.py
