[project]
name = "ai4h"
version = "0.1.0"
description = "Noah's AI for Humanity repository"
readme = "README.md"
authors = [
    { name = "Noah Carelse", email = "noah.carelse@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
]

[project.scripts]
ai4h = "ai4h:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
